# prometheus

./: CMakeLists.txt  README.md  package.xml
action/: MoveArm.action
config/: pink_ik_params.yaml
launch/: bringup_launch.py  gz.launch.py  localization_launch.py  nav2.launch.py  navigation_launch.py  pink_ik.launch.py  rviz.launch.py  slam_launch.py  spawn.launch.py
models/prometheus/urdf/: gz.xacro  prometheus.xacro
models/so_100_arm_5dof/urdf/: so_100_arm_5dof.urdf
params/: nav2_params.yaml
rviz/: entire_setup.rviz  map.rviz  nav2_default_view.rviz
scripts/: pink_ik_node.py  pink_ik_test_poses.py  remapper.py  set_initial_pose.py  test_docking_server.py
