<?xml version="1.0"?>
<package format="3">
	<name>prometheus</name>
	<version>1.0.0</version>
	<description>prometheus</description>

	<maintainer email="bruk@signalbotics.com">Bruk Gebregziabher</maintainer>
	<license>GPLv3</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<depend>geometry_msgs</depend>
	<depend>action_msgs</depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>rclpy</exec_depend>
	<exec_depend>control_msgs</exec_depend>
	<exec_depend>trajectory_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>std_srvs</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
